// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`readUsePracticesConfig should read usage config specifying locally declared practices, by custom config path 1`] = `
{
  "declared": ObjectContaining {
    "rootDir": Any<String>,
  },
  "rootDir": Any<String>,
  "scope": {
    "practices": undefined,
    "usecase": "lambda-service",
  },
  "variables": {
    "infrastructureNamespaceId": "abcde12345",
    "organizationName": "awesome-org",
    "serviceName": "svc-awesome-thing",
    "slackReleaseWebHook": "https://...",
  },
}
`;

exports[`readUsePracticesConfig should read usage config specifying locally declared practices, by directory 1`] = `
{
  "declared": ObjectContaining {
    "rootDir": Any<String>,
  },
  "rootDir": Any<String>,
  "scope": {
    "practices": undefined,
    "usecase": "lambda-service",
  },
  "variables": {
    "infrastructureNamespaceId": "abcde12345",
    "organizationName": "awesome-org",
    "serviceName": "svc-awesome-thing",
    "slackReleaseWebHook": "https://...",
  },
}
`;

exports[`readUsePracticesConfig should read usage config with exclusively practices scope 1`] = `
{
  "declared": ObjectContaining {
    "rootDir": Any<String>,
  },
  "rootDir": Any<String>,
  "scope": {
    "practices": [
      "cicd-common",
      "conventional-commits",
      "husky",
    ],
    "usecase": null,
  },
  "variables": {
    "infrastructureNamespaceId": "abcde12345",
    "organizationName": "awesome-org",
    "serviceName": "svc-awesome-thing",
    "slackReleaseWebHook": "https://...",
  },
}
`;

exports[`readUsePracticesConfig should read usage config with explicit practices scope 1`] = `
{
  "declared": ObjectContaining {
    "rootDir": Any<String>,
  },
  "rootDir": Any<String>,
  "scope": {
    "practices": [
      "cicd-common",
      "conventional-commits",
      "husky",
    ],
    "usecase": "lambda-service",
  },
  "variables": {
    "infrastructureNamespaceId": "abcde12345",
    "organizationName": "awesome-org",
    "serviceName": "svc-awesome-thing",
    "slackReleaseWebHook": "https://...",
  },
}
`;
